tests/fixtures/valid/empty_route.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <rte>
    <name>Empty route</name>
    <desc>A route with no points</desc>
  </rte>
</gpx>
